--- a/assits/scss/_base.scss
+++ b/assits/scss/_base.scss
@@ -13,3 +13,15 @@ html{
     box-sizing: border-box;
     scroll-behavior:smooth;
 }
+// style cho nút scroll lên đầu trang
+.main{
+    #btn{
+
+        .icon-up{
+            font-size: 16px;
+        }
+        .icon-bellow{
+            font-size: 16px;
+        }
+    }
+}
