--- a/assits/css/modal.css
+++ b/assits/css/modal.css
@@ -7,7 +7,7 @@
     bottom: 0;
     background-color: rgba(0,0,0,0.1);
     z-index: 100;
-    /* display: none; */
+    display: none;
     
 }
 .modal.show {
