--- a/assits/css/grid.css
+++ b/assits/css/grid.css
@@ -21,12 +21,16 @@
     max-width: 1200px;
     margin: 0 auto;
 }
-
+@media (min-width: 768px) {
+.container {
+    width: unset;
+}
+}
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .row.no-gutters {
@@ -35,8 +39,8 @@
 }
 
 .col {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .row.no-gutters .col {
@@ -155,13 +159,13 @@
 /* >= Tablet */
 @media (min-width: 740px) {
     .row {
-        margin-left: -12px;
-        margin-right: -12px;
+        margin-left: -25px;
+        margin-right: -25px;
     }
 
     .col {
-        padding-left: 12px;
-        padding-right: 12px;
+        padding-left: 25px;
+        padding-right: 25px;
     }
 
     .m-0 {
@@ -291,8 +295,8 @@
 /* PC medium resolution > */
 @media (min-width: 1113px) {
     .row {
-        margin-left: -12px;
-        margin-right: -12px;
+        margin-left: -25px;
+        margin-right: -25px;
     }
 
     .row.sm-gutter {
@@ -301,8 +305,8 @@
     }
 
     .col {
-        padding-left: 12px;
-        padding-right: 12px;
+        padding-left:25px;
+        padding-right:25px;
     }
 
     .row.sm-gutter .col {
@@ -463,8 +467,8 @@
     }
 
     .wide .row {
-        margin-left: -12px;
-        margin-right: -12px;
+        margin-left: -15px;
+        margin-right: -15px;
     }
 
     .wide .row.sm-gutter {
@@ -473,8 +477,8 @@
     }
 
     .wide .col {
-        padding-left: 12px;
-        padding-right: 12px;
+        padding-left:15px;
+        padding-right:15px;
     }
 
     .wide .row.sm-gutter .col {
