--- a/assits/css/header.css
+++ b/assits/css/header.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     right: 0;
-   
+    transition: all linear 0.3s;
 }
 .header .container{
     display: flex;
@@ -132,6 +132,7 @@
     padding: 0 24px;
     border-radius: 5px;
     flex-grow: 1;
+    flex-basis: 50%;
     
 }
 .header-products-sub-menu__item:hover{
