--- a/assits/css/header.css
+++ b/assits/css/header.css
@@ -1,12 +1,12 @@
 .header {
     height:var(--heightStart);
-    background-color: #eaf2ff;
     position: fixed;
     z-index: 5;
     top: 0;
     left: 0;
     right: 0;
     transition: all linear 0.3s;
+    background-color: white;
 }
 .header .container{
     display: flex;
