--- a/assits/css/header.css
+++ b/assits/css/header.css
@@ -1,377 +1,360 @@
 .header {
-    height:var(--heightStart);
-    position: fixed;
-    z-index: 5;
-    top: 0;
-    left: 0;
-    right: 0;
-    transition: all linear 0.3s;
-    background-color: white;
+  height: var(--heightStart);
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: all linear 0.3s;
+  background-color: white;
 }
-.header .container{
-    display: flex;
+.header .container {
+  display: flex;
 }
-.header-logo{
-    margin-right: 90px;
-
-}
-
-.header-logo__link{
-    height: 100%;
-    display: flex;
-    align-items: center;
+.header-logo {
+  margin-right: 90px;
 }
 
-.header-logo__img{
+.header-logo__link {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
 
+.header-logo__img {
 }
 .btn-menu-mobile {
-    display: flex;
-    align-items: center;
-    margin-right: 16px;
-    display: none;
-
+  display: flex;
+  align-items: center;
+  margin-right: 16px;
+  display: none;
 }
 .nav-overlay {
-    display: flex;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.1);
-    z-index: 100;
-    display: none;
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  display: none;
 }
-.header-nav{
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-    justify-content: space-between;
-}
-
-.header-nav-list{
-    display: flex;
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  justify-content: space-between;
 }
 
-.header-nav-item{
-    font-size: 1.4rem;
-    font-weight: 600;
-    padding: 8px 0;
-    margin: 0 7px;
-  
+.header-nav-list {
+  display: flex;
 }
-.header-nav-item:hover{
-    background-color: rgba(239,242,245,.4);
+
+.header-nav-item {
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding: 8px 0;
+  margin: 0 7px;
 }
-.header-nav-item:hover .header-nav-link{
-    color: var(--primaryColor);
+.header-nav-item:hover {
+  background-color: rgba(239, 242, 245, 0.4);
+}
+.header-nav-item:hover .header-nav-link {
+  color: var(--primaryColor);
 }
 .header-nav-item:hover .arrow-mobile {
-    color: var(--primaryColor);
+  color: var(--primaryColor);
 }
-.header-nav-link{
-    color: var(--textDarkColor);
-    padding:4px 14px;
-    letter-spacing: 1.6px;
-    display: flex;
-    justify-content: space-between;
+.header-nav-link {
+  color: var(--textDarkColor);
+  padding: 4px 14px;
+  letter-spacing: 1.6px;
+  display: flex;
+  justify-content: space-between;
 }
 .arrow-mobile {
-    display: none;
-    color:var(--muteColor);
-    font-size: 1.3rem;
+  display: none;
+  color: var(--muteColor);
+  font-size: 1.3rem;
 }
 .arrow-mobile.rotate {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
-.header-products:hover .header-products-sub-menu{
-    display: flex;
+.header-products:hover .header-products-sub-menu {
+  display: flex;
 }
-.header-products-sub-menu{
-    width: 700px;
-    position: absolute;
-    top:150%;
-    left:0;
-    padding:20px;
-    background-color: white;
-    box-shadow: 0 22px 49px 0 rgba(126,139,172,.25);
-    border-radius: 10px;
-    height:330px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    display: none;
-    animation: fadeIn 0.2s linear;
-    z-index: 10;
+.header-products-sub-menu {
+  width: 700px;
+  position: absolute;
+  top: 150%;
+  left: 0;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 22px 49px 0 rgba(126, 139, 172, 0.25);
+  border-radius: 10px;
+  height: 330px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  display: none;
+  animation: fadeIn 0.2s linear;
+  z-index: 10;
 }
 @keyframes fadeIn {
-    from{
-        opacity: 0;
-        top:180%;
-    }
-    to {
-        opacity: 1;
-        top:150%;
-    }
+  from {
+    opacity: 0;
+    top: 180%;
+  }
+  to {
+    opacity: 1;
+    top: 150%;
+  }
 }
 .header-products-sub-menu::before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: -27px;
-    left: 0;
-    height: 27px;
-    width: 100px;
-    
+  content: "";
+  display: block;
+  position: absolute;
+  top: -27px;
+  left: 0;
+  height: 27px;
+  width: 100px;
 }
 
-.header-products-sub-menu__item{
-    display: flex;
-    align-items: center;
-    padding: 0 24px;
-    border-radius: 5px;
-    flex-grow: 1;
-    flex-basis: 50%;
-    
+.header-products-sub-menu__item {
+  display: flex;
+  align-items: center;
+  padding: 0 24px;
+  border-radius: 5px;
+  flex-grow: 1;
+  flex-basis: 50%;
 }
-.header-products-sub-menu__item:hover{
-    background-color: #fafaff;
+.header-products-sub-menu__item:hover {
+  background-color: #fafaff;
 }
-.header-products-sub-menu__item:hover .header-products-img-visible{
-    display: block;
+.header-products-sub-menu__item:hover .header-products-img-visible {
+  display: block;
 }
-.header-products-sub-menu__item:hover .header-products-img-none{
-    display: none;
+.header-products-sub-menu__item:hover .header-products-img-none {
+  display: none;
 }
-.header-products-sub-menu__item:hover .header-products-heading{
-    color: var(--primaryColor);
+.header-products-sub-menu__item:hover .header-products-heading {
+  color: var(--primaryColor);
 }
-.header-products-sub-menu__item:hover .header-products-pg{
-    color: var(--textBlandColor);
-}
-
-.header-products-img-container{
-
+.header-products-sub-menu__item:hover .header-products-pg {
+  color: var(--textBlandColor);
 }
 
-.header-products-img-visible{
-    display: none;
+.header-products-img-container {
+}
+
+.header-products-img-visible {
+  display: none;
 }
 .header-products-img-none,
-.header-products-img-visible{
-    width: 30px;
-    margin-right: 16px;
+.header-products-img-visible {
+  width: 30px;
+  margin-right: 16px;
 }
 
-.header-products-content{
-    
+.header-products-content {
 }
 
-
-   
 .header-products-heading {
-    color: var(--textDarkColor);
-    margin-top: 0;
-    font-weight: 600;
-    margin-bottom: 8px;
-    font-size: 1.6rem;
+  color: var(--textDarkColor);
+  margin-top: 0;
+  font-weight: 600;
+  margin-bottom: 8px;
+  font-size: 1.6rem;
 }
 
-
-.header-products-pg{
-    color: var(--muteColor);
-    margin-bottom: 0;
-    margin-top: 0;
+.header-products-pg {
+  color: var(--muteColor);
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .header-learn:hover .header-learn-sub-menu {
-    display: flex;
+  display: flex;
 }
-.header-learn-sub-menu{
-    width: 650px;
-    position: absolute;
-    top:150%;
-    left:0;
-    background-color: white;
-    box-shadow: 0 22px 49px 0 rgba(126,139,172,.25);
-    border-radius: 10px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    display: none;
-    animation: fadeIn 0.2s linear;
-    z-index: 10;
+.header-learn-sub-menu {
+  width: 650px;
+  position: absolute;
+  top: 150%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0 22px 49px 0 rgba(126, 139, 172, 0.25);
+  border-radius: 10px;
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  display: none;
+  animation: fadeIn 0.2s linear;
+  z-index: 10;
 }
 .header-learn-sub-menu::before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: -27px;
-    left: 0;
-    height: 27px;
-    width: 100px;
-    
+  content: "";
+  display: block;
+  position: absolute;
+  top: -27px;
+  left: 0;
+  height: 27px;
+  width: 100px;
 }
 
-.header-learn__first
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: inherit;
-    flex-grow: 1;
+.header-learn__first {
+  display: flex;
+  flex-direction: column;
+  justify-content: inherit;
+  flex-grow: 1;
 }
 
-.header-learn__first-up{
-    display: flex;
-    flex-direction: column;
-    justify-content: inherit;
-    flex-grow: 2;
-    padding-right: 16px;
-    margin-left: 16px;
-    margin-bottom: 50px;
-    padding-top:16px;
+.header-learn__first-up {
+  display: flex;
+  flex-direction: column;
+  justify-content: inherit;
+  flex-grow: 2;
+  padding-right: 16px;
+  margin-left: 16px;
+  margin-bottom: 50px;
+  padding-top: 16px;
 }
 
-.header-learn__first-down{
-    padding-top: 16px;
-    padding-left: 26px;
-    padding-right:16px;
-    padding-bottom: 16px;
-    border-top: 1px solid #eff2f5;
+.header-learn__first-down {
+  padding-top: 16px;
+  padding-left: 26px;
+  padding-right: 16px;
+  padding-bottom: 16px;
+  border-top: 1px solid #eff2f5;
 }
-.header-learn__first-down-item{
-    padding:16px;
-    
+.header-learn__first-down-item {
+  padding: 16px;
 }
 
-.header-learn__second{
-    flex-grow: 2;
-    background-color:  #fafaff;
-    border-radius: 0 10px 10px 0;
-    padding-left: 36px;
-    padding-right:36px;
-    padding-top: 16px;
+.header-learn__second {
+  flex-grow: 2;
+  background-color: #fafaff;
+  border-radius: 0 10px 10px 0;
+  padding-left: 36px;
+  padding-right: 36px;
+  padding-top: 16px;
 }
-.header-learn__second-heading{
-    font-weight: 500;
-    font-size: 1.6rem;
-    
+.header-learn__second-heading {
+  font-weight: 500;
+  font-size: 1.6rem;
 }
 .header-learn__second-link {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .header-learn__second-link--item {
-    color: var(--textBlandColor);
-    font-weight: 500;
-    margin-bottom:16px;
+  color: var(--textBlandColor);
+  font-weight: 500;
+  margin-bottom: 16px;
 }
 .header-learn__second-link--item:hover {
-    color: var(--primaryColor);
+  color: var(--primaryColor);
 }
 .sub-header {
-    height: 90px;
-} 
-@media (max-width:996px) {
-    :root{
-        --heightStart:70px;
-        --heightScroll:60px;
-      }
-      .sub-header {
-        height: 70px;
-    } 
-      .header-nav {
-        justify-content: flex-end;
-      }
-      .header-nav-list {
-        display:block;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 250px;
-        background:white;
-        bottom: 0;
-        z-index: 1000;
-        overflow-y: auto;
-        transform: translateX(-100%);
-      }
-    .header-nav-list.transform {
-        transform: translateX(0);
-        
-    }
-    .header-logo {
-        margin-right: unset;
-    }
-    .header-nav-item {
-        margin-top: 12px;
-    }
-    .header-nav-link {
-        font-weight: 500;
-    }
-    .header-products-sub-menu {
-        position: relative;
-        left: 0;
-        top:12px;
-        width: 100%;
-        height: auto;
-        padding: 18px 12px;
-        background-color: white;
-        border-radius: 10px;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: space-between;
-        animation: unset;
-        z-index: 10;
-        box-shadow: unset;
-        display: none;
-    }
-    .header-products-sub-menu__item {
-        display: flex;
-        align-items: center;
-        padding: 12px;
-        border-radius: 5px;
-        flex-grow: 1;
-    }
-    .header-products-heading {
-        font-weight: 600;
-        font-size: 1.4rem;
-    }
-    .header-products-pg {
-        font-size: 1.3rem;
-        font-weight: 500;
-    }
-    .header-learn-sub-menu {
-        position: relative;
-        background-color: white;
-        box-shadow: unset;
-        top: 8px;
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        animation: unset;
-        display: none;
-        z-index: 10;
-    }
-    .header-products:hover .header-products-sub-menu{
-        display: none;
-    }
-    .header-learn:hover .header-learn-sub-menu {
-        display: none;
-    }
-    .arrow-mobile{
-        display: block;
-    }
-    .btn{
+  height: 90px;
+}
+@media (max-width: 996px) {
+  :root {
+    --heightStart: 70px;
+    --heightScroll: 60px;
+  }
+  .sub-header {
+    height: 70px;
+  }
+  .header-nav {
+    justify-content: flex-end;
+  }
+  .header-nav-list {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    background: white;
+    bottom: 0;
+    z-index: 1000;
+    overflow-y: auto;
+    transform: translateX(-100%);
+  }
+  .header-nav-list.transform {
+    transform: translateX(0);
+  }
+  .header-logo {
+    margin-right: unset;
+  }
+  .header-nav-item {
+    margin-top: 12px;
+  }
+  .header-nav-link {
+    font-weight: 500;
+  }
+  .header-products-sub-menu {
+    position: relative;
+    left: 0;
+    top: 12px;
+    width: 100%;
+    height: auto;
+    padding: 18px 12px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    animation: unset;
+    z-index: 10;
+    box-shadow: unset;
+    display: none;
+  }
+  .header-products-sub-menu__item {
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    border-radius: 5px;
+    flex-grow: 1;
+  }
+  .header-products-heading {
+    font-weight: 600;
+    font-size: 1.4rem;
+  }
+  .header-products-pg {
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+  .header-learn-sub-menu {
+    position: relative;
+    background-color: white;
+    box-shadow: unset;
+    top: 8px;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    animation: unset;
+    display: none;
+    z-index: 10;
+  }
+  .header-products:hover .header-products-sub-menu {
+    display: none;
+  }
+  .header-learn:hover .header-learn-sub-menu {
+    display: none;
+  }
+  .arrow-mobile {
+    display: block;
+  }
+  .btn {
     padding: 10px;
-    }
-    .btn-menu-mobile {
-        display: flex;
-    }
-    
+  }
+  .btn-menu-mobile {
+    display: flex;
+  }
 }
